--- a/weather.html
+++ b/weather.html
@@ -44,7 +44,7 @@
       resultDiv.textContent = 'Loading...';
 
       try {
-        const response = await fetch(`http://localhost:3001/api/weather?location=${location}`);
+        const response = await fetch(`https://agukaweb.onrender.com/api/weather?location=${location}`);
         const data = await response.json();
 
         if (!response.ok) {
