--- a/prices.html
+++ b/prices.html
@@ -36,7 +36,7 @@
   <script>
     async function fetchMarketPrices(category) {
       try {
-        const response = await fetch(`http://localhost:3001/crop-management/market/${category}`);
+        const response = await fetch(`https://agukaweb.onrender.com/crop-management/market/${category}`);
         const data = await response.json();
 
         if (!response.ok) {
