--- a/crop-details.html
+++ b/crop-details.html
@@ -53,7 +53,7 @@
   }
 
   try {
-    const response = await fetch(`http://localhost:3001/crop-management/${crop}`);
+    const response = await fetch(`https://agukaweb.onrender.com/crop-management/${crop}`);
     const data = await response.json();
 
     if (!response.ok) {
