--- a/community.html
+++ b/community.html
@@ -76,7 +76,7 @@
 
     async function fetchPosts() {
       try {
-        const response = await fetch('http://localhost:3001/api/community');
+        const response = await fetch('https://agukaweb.onrender.com/api/community');
         const data = await response.json();
 
         if (!response.ok) {
