--- a/weather.html
+++ b/weather.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color:(135deg, #56ab2f, #a8e063);
+      background-color: #f4f4f4;
     }
     .container {
       max-width: 600px;
