--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
       const content = document.getElementById('content').value;
 
       try {
-        const response = await fetch('http://localhost:3001/api/community', {
+        const response = await fetch('https://agukaweb.onrender.com/api/community', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ author, title, content }),
